# ray-tracer

./: CMakeLists.txt  README.md  main.cpp
include/: canvas.h  color.h  constants.h  intersection.h  intersections.h  lights.h  material.h  matrix.h  ray.h  sphere.h  tuple.h
src/display/: canvas.cpp
src/math/: color.cpp  constants.cpp  intersection.cpp  intersections.cpp  lights.cpp  material.cpp  matrix.cpp  ray.cpp  tuple.cpp
src/shapes/: sphere.cpp
tests/: canvas_test.cpp  color_test.cpp  matrix_test.cpp  ray_sphere_test.cpp  shading_test.cpp  transformation_test.cpp  tuple_test.cpp
